--- a/3. To - Do App/index.html
+++ b/3. To - Do App/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskFlow</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -92,8 +92,6 @@
         </div>
     </div>
 
-    <script>
-        
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
