--- a/4. Resume/index.html
+++ b/4. Resume/index.html
@@ -131,8 +131,15 @@
             <div class="section">
                 <h2 class="section-title">Education</h2>
                 <div class="education-item">
-                    <h3>[Bachelor of Technology/Science] in [Computer Science/Engineering/Your Major]</h3>
-                    <div class="institution">[University Name] | [Location] • Expected [Graduation Year]</div>
+                    <h3>Bachelor of Science (Honours) in Computer Science</h3>
+                    <div class="institution">Birla Institute of Technology and Science | Pilani, Rajasthan • Graduation Year: 2029</div>
+                    <div class="education-details">
+                        Current GPA: [X.XX/4.0] | First Year | Relevant Coursework: [Programming Fundamentals, Data Structures, Calculus, Physics, etc.]
+                    </div>
+                </div>
+                <div class="education-item">
+                    <h3>Computer Science & AI Program</h3>
+                    <div class="institution"> • Scaler School of Technology | Bangalore, Karnataka •      Graduation Year: 2029</div>
                     <div class="education-details">
                         Current GPA: [X.XX/4.0] | First Year | Relevant Coursework: [Programming Fundamentals, Data Structures, Calculus, Physics, etc.]
                     </div>
@@ -142,10 +149,10 @@
             <div class="section">
                 <h2 class="section-title">Technical Skills</h2>
                 <div class="professional-summary" style="padding: 12px 15px;">
-                    <strong style="color: #ffffff; font-size: 10.5px;">Programming Languages:</strong> [Python, Java, C++, JavaScript, etc.]<br><br>
-                    <strong style="color: #ffffff; font-size: 10.5px;">Web Technologies:</strong> [HTML, CSS, React, Node.js, etc.]<br><br>
-                    <strong style="color: #ffffff; font-size: 10.5px;">Tools & Platforms:</strong> [Git, VS Code, Linux, MySQL, etc.]<br><br>
-                    <strong style="color: #ffffff; font-size: 10.5px;">Core Competencies:</strong> [Problem Solving, Team Collaboration, Quick Learning, Adaptability, Communication]
+                    <strong style="color: #ffffff; font-size: 10.5px;">Programming Languages:</strong> C, Java, JavaScript, etc.<br><br>
+                    <strong style="color: #ffffff; font-size: 10.5px;">Web Technologies:</strong> HTML, CSS, React, etc.]<br><br>
+                    <strong style="color: #ffffff; font-size: 10.5px;">Tools & Platforms:</strong> Git, VS Code, Linux, MySQL, etc.<br><br>
+                    <strong style="color: #ffffff; font-size: 10.5px;">Core Competencies:</strong> Problem Solving, Team Collaboration, Quick Learning, Adaptability, Communication
                 </div>
             </div>
         </div>
