--- a/index.html
+++ b/index.html
@@ -1,185 +1,202 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Anurag Kumar | Frontend Developer</title>
+  <head>
+    <title>Anurag Kumar | Frontend Developer</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background-color: #0b1120;
+        color: #e5e7eb;
+      }
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0b1120;
-      color: #e5e7eb;
-    }
+      .container {
+        max-width: 1000px;
+        margin: auto;
+        padding: 40px 20px;
+      }
 
-    .container {
-      max-width: 1000px;
-      margin: auto;
-      padding: 40px 20px;
-    }
+      h1 {
+        text-align: center;
+        font-size: 40px;
+        margin-bottom: 8px;
+      }
 
-    h1 {
-      text-align: center;
-      font-size: 40px;
-      margin-bottom: 8px;
-    }
+      h2 {
+        text-align: center;
+        font-size: 20px;
+        font-weight: normal;
+        color: #9ca3af;
+        margin-bottom: 20px;
+      }
 
-    h2 {
-      text-align: center;
-      font-size: 20px;
-      font-weight: normal;
-      color: #9ca3af;
-      margin-bottom: 20px;
-    }
+      .links {
+        text-align: center;
+        margin-bottom: 40px;
+      }
 
-    .links {
-      text-align: center;
-      margin-bottom: 40px;
-    }
+      .links a {
+        display: inline-block;
+        margin: 5px 10px;
+        padding: 10px 18px;
+        background-color: #38bdf8;
+        color: #020617;
+        text-decoration: none;
+        font-weight: bold;
+        border-radius: 6px;
+      }
 
-    .links a {
-      display: inline-block;
-      margin: 5px 10px;
-      padding: 10px 18px;
-      background-color: #38bdf8;
-      color: #020617;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 6px;
-    }
+      .links a:hover {
+        opacity: 0.9;
+      }
 
-    .links a:hover {
-      opacity: 0.9;
-    }
+      .section {
+        margin-bottom: 40px;
+      }
 
-    .section {
-      margin-bottom: 40px;
-    }
+      .section h3 {
+        font-size: 24px;
+        margin-bottom: 15px;
+        border-bottom: 1px solid #1f2933;
+        padding-bottom: 8px;
+      }
 
-    .section h3 {
-      font-size: 24px;
-      margin-bottom: 15px;
-      border-bottom: 1px solid #1f2933;
-      padding-bottom: 8px;
-    }
+      .section p,
+      .section li {
+        font-size: 15px;
+        color: #d1d5db;
+        line-height: 1.6;
+      }
 
-    .section p,
-    .section li {
-      font-size: 15px;
-      color: #d1d5db;
-      line-height: 1.6;
-    }
+      ul {
+        padding-left: 20px;
+      }
 
-    ul {
-      padding-left: 20px;
-    }
+      .projects {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+        gap: 20px;
+      }
 
-    .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-    }
+      .card {
+        background-color: #020617;
+        padding: 20px;
+        border-radius: 10px;
+      }
 
-    .card {
-      background-color: #020617;
-      padding: 20px;
-      border-radius: 10px;
-    }
+      .card h4 {
+        margin-bottom: 10px;
+        font-size: 18px;
+      }
 
-    .card h4 {
-      margin-bottom: 10px;
-      font-size: 18px;
-    }
+      .card a {
+        text-decoration: none;
+        color: #38bdf8;
+        font-weight: bold;
+      }
 
-    .card a {
-      text-decoration: none;
-      color: #38bdf8;
-      font-weight: bold;
-    }
+      footer {
+        text-align: center;
+        margin-top: 50px;
+        color: #6b7280;
+        font-size: 14px;
+      }
+    </style>
+  </head>
 
-    footer {
-      text-align: center;
-      margin-top: 50px;
-      color: #6b7280;
-      font-size: 14px;
-    }
-  </style>
-</head>
+  <body>
+    <div class="container">
+      <h1>Anurag Kumar</h1>
+      <h2>Frontend Developer</h2>
 
-<body>
+      <div class="links">
+        <a href="https://github.com/your-github-username" target="_blank"
+          >GitHub</a
+        >
+        <a href="https://linkedin.com/in/your-linkedin-id" target="_blank"
+          >LinkedIn</a
+        >
+      </div>
 
-  <div class="container">
+      <div class="section">
+        <h3>Professional Summary</h3>
+        <p>
+          Entry-level Frontend Developer with hands-on experience in building
+          responsive web pages using HTML, CSS, and JavaScript. Skilled in
+          creating clean user interfaces, managing project structure, and using
+          Git and GitHub for version control. Actively learning and improving
+          frontend development and problem-solving skills through practical
+          projects.
+        </p>
+      </div>
 
-    <h1>Anurag Kumar</h1>
-    <h2>Frontend Developer</h2>
+      <div class="section">
+        <h3>Technical Skills</h3>
+        <ul>
+          <li>HTML5, CSS3</li>
+          <li>JavaScript (Basics)</li>
+          <li>Responsive Web Design</li>
+          <li>Git and GitHub</li>
+          <li>DOM Manipulation</li>
+          <li>Problem Solving</li>
+        </ul>
+      </div>
 
-    <div class="links">
-      <a href="https://github.com/your-github-username" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/in/your-linkedin-id" target="_blank">LinkedIn</a>
-    </div>
+      <div class="section">
+        <h3>Projects</h3>
 
-    <div class="section">
-      <h3>Professional Summary</h3>
-      <p>
-        Entry-level Frontend Developer with hands-on experience in building responsive web pages using HTML, CSS, and JavaScript. Skilled in creating clean user interfaces, managing project structure, and using Git and GitHub for version control. Actively learning and improving frontend development and problem-solving skills through practical projects.
-      </p>
-    </div>
+        <div class="projects">
+          <div class="card">
+            <h4>Tribute Page</h4>
+            <p>
+              Static webpage built using HTML and CSS with focus on layout and
+              styling.
+            </p>
+            <a href="TributePage/index.html">View Project</a>
+          </div>
 
-    <div class="section">
-      <h3>Technical Skills</h3>
-      <ul>
-        <li>HTML5, CSS3</li>
-        <li>JavaScript (Basics)</li>
-        <li>Responsive Web Design</li>
-        <li>Git and GitHub</li>
-        <li>DOM Manipulation</li>
-        <li>Problem Solving</li>
-      </ul>
-    </div>
+          <div class="card">
+            <h4>Portfolio Website</h4>
+            <p>
+              Personal portfolio website designed with a dark theme to showcase
+              projects.
+            </p>
+            <a href="Portfolio/index.html">View Project</a>
+          </div>
 
-    <div class="section">
-      <h3>Projects</h3>
+          <div class="card">
+            <h4>To-Do Application</h4>
+            <p>
+              Task management app built using JavaScript to add, delete, and
+              manage tasks.
+            </p>
+            <a href="ToDoApp/index.html">View Project</a>
+          </div>
 
-      <div class="projects">
-        <div class="card">
-          <h4>Tribute Page</h4>
-          <p>Static webpage built using HTML and CSS with focus on layout and styling.</p>
-          <a href="TributePage/index.html">View Project</a>
-        </div>
-
-        <div class="card">
-          <h4>Portfolio Website</h4>
-          <p>Personal portfolio website designed with a dark theme to showcase projects.</p>
-          <a href="Portfolio/index.html">View Project</a>
-        </div>
-
-        <div class="card">
-          <h4>To-Do Application</h4>
-          <p>Task management app built using JavaScript to add, delete, and manage tasks.</p>
-          <a href="ToDoApp/index.html">View Project</a>
-        </div>
-
-        <div class="card">
-          <h4>Online Resume</h4>
-          <p>Resume webpage presenting skills, projects, and professional details.</p>
-          <a href="Resume/index.html">View Resume</a>
+          <div class="card">
+            <h4>Online Resume</h4>
+            <p>
+              Resume webpage presenting skills, projects, and professional
+              details.
+            </p>
+            <a href="Resume/index.html">View Resume</a>
+          </div>
         </div>
       </div>
+
+      <div class="section">
+        <h3>Experience and Learning</h3>
+        <ul>
+          <li>
+            Built multiple frontend projects to gain practical development
+            experience.
+          </li>
+          <li>Used GitHub Pages for hosting and deployment.</li>
+          <li>Continuously learning modern frontend development concepts.</li>
+        </ul>
+      </div>
+
+      <footer>© 2025 Anurag Kumar | Frontend Developer</footer>
     </div>
-
-    <div class="section">
-      <h3>Experience and Learning</h3>
-      <ul>
-        <li>Built multiple frontend projects to gain practical development experience.</li>
-        <li>Used GitHub Pages for hosting and deployment.</li>
-        <li>Continuously learning modern frontend development concepts.</li>
-      </ul>
-    </div>
-
-    <footer>
-      © 2025 Anurag Kumar | Frontend Developer
-    </footer>
-
-  </div>
-
-</body>
+  </body>
 </html>
