Update experience section in index.html with current role and self-learning details

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -248,32 +248,22 @@
         <h2 class="section-title">Experience</h2>
         <div class="experience-timeline">
           <div class="experience-item">
-            <h3>[Your Role]</h3>
-            <p class="company">[Company Name] • [Duration]</p>
+            <h3>Intern – Product Management & Ground Operations</h3>
+            <p class="company">Naviksha • December 2025 – Present</p>
             <p>
-              Led development of key features and collaborated with
-              cross-functional teams. Implemented best practices for code
-              quality and performance optimization. Mentored junior developers
-              and contributed to architectural decisions.
+              Collaborating with cross-functional teams to streamline product
+              workflows and enhance user experience. Assisted in developing
+              operational strategies that improved efficiency by 25%.
             </p>
           </div>
+
           <div class="experience-item">
-            <h3>[Your Role]</h3>
-            <p class="company">[Company Name] • [Duration]</p>
+            <h3>Self-Learning & Skill Development</h3>
+            <p class="company">Independent • Ongoing</p>
             <p>
-              Developed and maintained multiple projects using modern
-              frameworks. Worked closely with designers to create pixel-perfect
-              user interfaces. Improved application performance by 40% through
-              code optimization.
-            </p>
-          </div>
-          <div class="experience-item">
-            <h3>[Your Role]</h3>
-            <p class="company">[Company Name] • [Duration]</p>
-            <p>
-              Built responsive web applications and RESTful APIs. Participated
-              in agile development cycles and daily standups. Gained hands-on
-              experience with version control and CI/CD pipelines.
+              Continuously enhancing my frontend development skills through
+              online courses, tutorials, and hands-on projects. Focused on
+              mastering HTML, CSS, JavaScript, and responsive design principles.
             </p>
           </div>
         </div>
