--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -123,7 +123,7 @@
         <h2 class="section-title">Featured Projects</h2>
         <div class="projects-grid">
           <div class="project-card">
-            <div class="project-image">🚀</div>
+            <div class="project-image portfolio-image"></div>
             <div class="project-content">
               <h3>Portfolio Website</h3>
               <p>
@@ -152,7 +152,7 @@
             </div>
           </div>
           <div class="project-card">
-            <div class="project-image">🎯</div>
+            <div class="project-image resume-image"></div>
             <div class="project-content">
               <h3>Resume Website</h3>
               <p>
@@ -181,7 +181,7 @@
             </div>
           </div>
           <div class="project-card">
-            <div class="project-image">🚀</div>
+            <div class="project-image todo-image"></div>
             <div class="project-content">
               <h3>To Do App</h3>
               <p>
@@ -210,7 +210,7 @@
             </div>
           </div>
           <div class="project-card">
-            <div class="project-image">🚀</div>
+            <div class="project-image msd-image"></div>
             <div class="project-content">
               <h3>Tribute Page</h3>
               <p>
