Add Font Awesome icons and implement contact form styles in index.html and style.css

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio - Anurag Kumar</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
     <!-- Animated Background -->
@@ -94,19 +98,19 @@
         <h2 class="section-title">Skills & Technologies</h2>
         <div class="skills-grid">
           <div class="skill-item">
-            <div class="skill-icon">💻</div>
+            <div class="skill-icon"><i class="fa-brands fa-html5"></i></div>
             <div>HTML</div>
           </div>
           <div class="skill-item">
-            <div class="skill-icon">🎨</div>
+            <div class="skill-icon"><i class="fa-brands fa-css3-alt"></i></div>
             <div>CSS</div>
           </div>
           <div class="skill-item">
-            <div class="skill-icon">⚡</div>
+            <div class="skill-icon"><i class="fa-brands fa-js"></i></div>
             <div>JavaScript</div>
           </div>
           <div class="skill-item">
-            <div class="skill-icon">🔧</div>
+            <div class="skill-icon"><i class="fa-brands fa-react"></i></div>
             <div>React</div>
           </div>
           <div class="skill-item">
@@ -279,23 +283,83 @@
             I'm always open to discussing new projects, creative ideas, or
             opportunities to be part of your vision. Feel free to reach out!
           </p>
+
+          <div class="contact-form-container">
+            <!-- <form id="contactForm" class="contact-form">
+              <div class="form-group">
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  placeholder="Your Name *"
+                  required
+                  class="form-input"
+                />
+                <div class="error-message" id="nameError"></div>
+              </div>
+
+              <div class="form-group">
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  placeholder="Your Email *"
+                  required
+                  class="form-input"
+                />
+                <div class="error-message" id="emailError"></div>
+              </div>
+
+              <div class="form-group">
+                <input
+                  type="text"
+                  id="subject"
+                  name="subject"
+                  placeholder="Subject *"
+                  required
+                  class="form-input"
+                />
+                <div class="error-message" id="subjectError"></div>
+              </div>
+
+              <div class="form-group">
+                <textarea
+                  id="message"
+                  name="message"
+                  placeholder="Your Message *"
+                  rows="5"
+                  required
+                  class="form-textarea"
+                ></textarea>
+                <div class="error-message" id="messageError"></div>
+              </div>
+
+              <button type="submit" class="cta-button form-submit-btn">
+                <span class="btn-text">Send Message</span>
+                <span class="btn-loader" style="display: none">Sending...</span>
+              </button>
+
+              <div class="form-status" id="formStatus"></div>
+            </form> -->
+          </div>
+
           <div class="contact-links">
             <a href="mailto:anuragakn18@gmail.com" class="contact-link">
-              📧 Email
+               <i class="fa-solid fa-envelope"></i> Email
             </a>
             <a
               href="https://github.com/anurag2417"
               target="_blank"
               class="contact-link"
             >
-              💻 GitHub
+              <i class="fa-brands fa-github"></i> GitHub
             </a>
             <a
               href="http://www.linkedin.com/in/anurag-kumar-857637270"
               target="_blank"
               class="contact-link"
             >
-              💼 LinkedIn
+              <i class="fa-brands fa-linkedin"></i> LinkedIn
             </a>
           </div>
         </div>
@@ -310,20 +374,21 @@
             href="https://github.com/anurag2417"
             target="_blank"
             class="social-link"
-            >G</a
-          >
+            ><i class="fa-brands fa-google"></i
+          ></a>
           <a
             href="http://www.linkedin.com/in/anurag-kumar-857637270"
             target="_blank"
             class="social-link"
-            >L</a
           >
+            <i class="fa-brands fa-linkedin"></i
+          ></a>
           <a
             href="https://x.com/AnuragK50790207"
             target="_blank"
             class="social-link"
-            >T</a
-          >
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
         </div>
         <p>&copy; 2025 Anurag Kumar. Designed & Built with passion.</p>
       </div>
