--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <link rel="icon" href="portfolioimage.png" type="image/png">
   </head>
   <body>
     <!-- Animated Background -->
