--- a/TributePage/index.html
+++ b/TributePage/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MS Dhoni - Captain Cool | A Tribute</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="msdimage.png" type="image/png">
 </head>
 <body>
 
