Add project icon to index.html for improved branding

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Anurag Kumar | Frontend Developer</title>
+    <link rel="icon" href="projecticon.jpg" type="image/png" />
     <style>
       body {
         margin: 0;
