Update links in index.html to point to the correct GitHub and LinkedIn profiles

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
       <h2>Frontend Developer</h2>
 
       <div class="links">
-        <a href="https://github.com/your-github-username" target="_blank"
+        <a href="https://github.com/anurag2417" target="_blank"
           >GitHub</a
         >
-        <a href="https://linkedin.com/in/your-linkedin-id" target="_blank"
+        <a href="https://www.linkedin.com/in/anurag-kumar-857637270" target="_blank"
           >LinkedIn</a
         >
       </div>
